--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:theme="@style/Theme.HorarioTareas"
         tools:targetApi="31">
         <activity
+            android:name=".NuevaTareaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CalendarioNuevaTareaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VerTareaActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
